--- a/Report.Rmd
+++ b/Report.Rmd
@@ -65,16 +65,21 @@ Superfund sites are areas designated by the EPA that are contaminated with hazar
 
 # Data
 
-#### Source
+#### Sources
+
+The data sets used were all publicly available from either federal or state governmental websites. Data on the exposure of interest were gathered from the EPA National Priorities List for the number and geographical locations of current superfund sites by county level in Pennsylvania. Asthma and cancer prevalences along with confounding factors of smoking, depression, and insurance status came from the CDC PLACES dataset. In order to map locations of superfund sites geographically, a shapefile for the state of Pennsylvania was downloaded from the Pennsylvania Spatial Data Access website. All datasets can be found at the links below.
+
 * CDC PLACES: Local Data for Better Health: County Data- [Link](https://chronicdata.cdc.gov/500-Cities-Places/PLACES-County-Data-GIS-Friendly-Format-2022-releas/i46a-9kgh)
 
 * EPA National Priorities List (NPL)- [Link](https://www.epa.gov/superfund/search-superfund-sites-where-you-live)
 
-*
- 
-#### Scraping
+* Pennsylvania Geospatial Data Access (PASDA): [Link](https://www.pasda.psu.edu/uci/DataSummary.aspx?dataset=24)
+
 
 ##### Cleaning 
+
+All datasets were available as either a CSV file or a shapefile, so no data scraping was necessary for our analysis. Each dataset was cleaned to focus on our variables of interest within Pennsylvania.
+
 
 # Exploratory Analysis
 
@@ -163,7 +168,7 @@ We evaluated the  cancer crude counts (total number of individuals who had cance
 
 ### Confounder Selection: Analyze these values: 
 
-We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavoral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
+We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavioral factors like smoking, and health attributes like depression could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
 
 `Total Population`
 ```{r}
