--- a/Cancer_regression.Rmd
+++ b/Cancer_regression.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, message= FALSE, error =FALSE}
 library(tidyverse)
 library(modelr)
 library(mgcv)
@@ -43,7 +43,7 @@ scale_fill_discrete = scale_fill_viridis_d
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
-```{r}
+```{r, echo=FALSE, message= FALSE, error =FALSE}
 health_outcomes = 
   read_csv("./data/PLACES_County_2022.csv") %>% 
   janitor::clean_names() %>% 
