--- a/Report.Rmd
+++ b/Report.Rmd
@@ -26,6 +26,9 @@ library(naniar)
 library(dplyr) 
 library(broom)
 library(AER)
+library(tmap)
+library(tmaptools)
+library(sf)
 
 
 knitr::opts_chunk$set(echo = TRUE)
@@ -40,114 +43,99 @@ scale_colour_discrete = scale_color_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 ```
 
+```{r, echo=FALSE}
+suppressPackageStartupMessages(library(sf))
+```
+
+
+```{html, message = FALSE, warning = FALSE}
 <style type="text/css">
 </style>
+```
 
-&nbsp;
+
 
 # Motivation
 
-Superfund sites are areas designated by the EPA that are contaminated with hazardous or toxic substances and have potential to release these substances into the environment, adversely affecting human health. The motivation of this project is to evaluate the health effects of living in proximity to a Superfund site, as [1 in 6 Americans](https://housingmatters.urban.org/articles/millions-americans-live-near-toxic-waste-sites-how-does-affect-their-health) currently live near a Superfund site.  In particular, we are interested in the effects residing near a Superfund site on asthma and cancer outcomes, since risk for those two diseases can be influenced by environmental exposures. 
+Superfund sites are areas designated by the EPA that are contaminated with hazardous or toxic substances and have potential to release these substances into the environment, adversely affecting human health. The motivation of this project is to evaluate the health effects of living in proximity to a Superfund site, as [1 in 6 Americans](https://housingmatters.urban.org/articles/millions-americans-live-near-toxic-waste-sites-how-does-affect-their-health) currently live near a Superfund site. In particular, we are interested in the effects residing near a Superfund site on asthma and cancer outcomes, since risk for those two diseases can be influenced by environmental exposures.
 
-&nbsp;
+## Related Motivating Sources
 
-## Related Motivating Sources 
+-   "Millions of Americans Live Near Toxic Waste Sites. How Does This Affect Their Health?" from Housing Matters- [Link](https://housingmatters.urban.org/articles/millions-americans-live-near-toxic-waste-sites-how-does-affect-their-health)
 
-* "Millions of Americans Live Near Toxic Waste Sites. How Does This Affect Their Health?" from Housing Matters- [Link](https://housingmatters.urban.org/articles/millions-americans-live-near-toxic-waste-sites-how-does-affect-their-health)
+-   "The presence of Superfund sites as a determinant of life expectancy in the United States" from Nature Communications- [Link](https://www.nature.com/articles/s41467-021-22249-2)
 
-* "The presence of Superfund sites as a determinant of life expectancy in the United States" from Nature Communications- [Link](https://www.nature.com/articles/s41467-021-22249-2)
+## Initial Questions
 
-## Initial Questions 
-1. Does living in a county with a Superfund increase risk for cancer? 
-2. Does living in a county with a Superfund increase risk for asthma? 
-3. Does county level Superfund site score affect both cancer and asthma outcomes?
-4. What is the geographic spread of Superfund sites in Pennsylvania? 
-
-&nbsp;
+1.  Does living in a county with a Superfund increase risk for cancer?
+2.  Does living in a county with a Superfund increase risk for asthma?
+3.  Does county level Superfund site score affect both cancer and asthma outcomes?
+4.  What is the geographic spread of Superfund sites in Pennsylvania?
 
 # Data
 
-<<<<<<< HEAD
-#### Sources
-
-The data sets used were all publicly available from either federal or state governmental websites. Data on the exposure of interest were gathered from the EPA National Priorities List for the number and geographical locations of current superfund sites by county level in Pennsylvania. Asthma and cancer prevalences along with confounding factors of smoking, depression, and insurance status came from the CDC PLACES dataset. In order to map locations of superfund sites geographically, a shapefile for the state of Pennsylvania was downloaded from the Pennsylvania Spatial Data Access website. All datasets can be found at the links below.
-
-* CDC PLACES: Local Data for Better Health: County Data- [Link](https://chronicdata.cdc.gov/500-Cities-Places/PLACES-County-Data-GIS-Friendly-Format-2022-releas/i46a-9kgh)
-=======
 ### Sources
-* *CDC PLACES: Local Data for Better Health: County Data* - [Link](https://chronicdata.cdc.gov/500-Cities-Places/PLACES-County-Data-GIS-Friendly-Format-2022-releas/i46a-9kgh)
->>>>>>> c6483932c0684099e5a6c2e412d7ee5e12efda83
 
-* *EPA National Priorities List (NPL)* - [Link](https://www.epa.gov/superfund/search-superfund-sites-where-you-live)
+-   *CDC PLACES: Local Data for Better Health: County Data* - [Link](https://chronicdata.cdc.gov/500-Cities-Places/PLACES-County-Data-GIS-Friendly-Format-2022-releas/i46a-9kgh)
 
-<<<<<<< HEAD
-* Pennsylvania Geospatial Data Access (PASDA): [Link](https://www.pasda.psu.edu/uci/DataSummary.aspx?dataset=24)
+-   *EPA National Priorities List (NPL)* - [Link](https://www.epa.gov/superfund/search-superfund-sites-where-you-live)
 
-=======
-* *Pennsylvania Spatial Data Access*- [Link](https://www.pasda.psu.edu/uci/DataSummary.aspx?dataset=24) 
+-   *Pennsylvania Spatial Data Access*- [Link](https://www.pasda.psu.edu/uci/DataSummary.aspx?dataset=24)
 
-&nbsp;
- 
 ### Variables
+
 ##### *CDC PLACES Dataset*
->>>>>>> c6483932c0684099e5a6c2e412d7ee5e12efda83
 
 **General**
 
-* `county`
-* `state`
+-   `county`
+-   `state`
 
-**Health Outcomes** 
+**Health Outcomes**
 
-* `casthma_crude_prev`
-* `casthma_crude95ci`
-* `cancer_crude_prev`
-* `cancer_crude95ci`
-* `csmoking_crude_prev`
-* `depression_crude_prev`
-* `access2_crude_prev` - prevalence of lack of health insurance 
+-   `casthma_crude_prev`
+-   `casthma_crude95ci`
+-   `cancer_crude_prev`
+-   `cancer_crude95ci`
+-   `csmoking_crude_prev`
+-   `depression_crude_prev`
+-   `access2_crude_prev` - prevalence of lack of health insurance
 
 ##### *EPA National Priorities List (NPL) Dataset*
-* `county`
-* `latitude`
-* `longitude`
-* `site_score`
-* `n_superfund`
+
+-   `county`
+-   `latitude`
+-   `longitude`
+-   `site_score`
+-   `n_superfund`
 
 ##### *Pennsylvania Spatial Data Access*
 
 This dataset was used as a shapefile for Pennsylvania state and its counties
 
-
-* `county`
-* `fips_count`
-* `shape_leng`
-* `shape_area`
-* `geometry`
-
-&nbsp;
+-   `county`
+-   `fips_count`
+-   `shape_leng`
+-   `shape_area`
+-   `geometry`
 
 ### Data Cleaning
-The CDC PLACES and EPA NPL datasets were cleaned in a similar fashion. Both datasets were in CSV format and imported into R. The variables names were all cleaned, then the variables of interest were selected and renamed if they were not intuitive to the user. Since the CDC dataset was nationwide, we computed the national average prevalence for cancer and asthma,to compare to the prevalence in Pennsylvania state. Then, we filtered the dataset to only include values for Pennsylvania state. For the EPA NPL dataset, the dataset was already isolated to only include sites in Pennsylvania. 
 
-For the exploratory analyses, the two datasets were then joined by `county` and tidy datasets were used to analyze the outcomes between counties with superfunds versus counties without superfunds. 
+The CDC PLACES and EPA NPL datasets were cleaned in a similar fashion. Both datasets were in CSV format and imported into R. The variables names were all cleaned, then the variables of interest were selected and renamed if they were not intuitive to the user. Since the CDC dataset was nationwide, we computed the national average prevalence for cancer and asthma,to compare to the prevalence in Pennsylvania state. Then, we filtered the dataset to only include values for Pennsylvania state. Although the EPA NPL website included a dataset for superfund sites nationwide, we used the website to isolate to only include sites in Pennsylvania.
+
+For the exploratory analyses, the two datasets were then joined by `county` and tidy datasets were used to analyze the outcomes between counties with superfund sites versus counties without superfund sites.
 
 All datasets were available as either a CSV file or a shapefile, so no data scraping was necessary for our analysis. Each dataset was cleaned to focus on our variables of interest within Pennsylvania.
-
 
 # Exploratory Analysis
 
 ### *EPA National Priorities List (NPL) Data*
-<br> The exploratory analysis for the  EPA NPL dataset was used to give context to the number of Superfund sites in PA, the mean site score, and where they were located geographically. 
 
-&nbsp;
+The exploratory analysis for the EPA NPL dataset was used to give context to the number of Superfund sites in PA, the mean site score, and where they were located geographically.
 
 #### **Number of Superfunds by County**
 
-This plot gives an overview of the number of Superfund sites per county contextualizing the distribution of Superfund sites across counties in Pennsylvania. Of the 67 total counties in PA, almost half (33 counties) contain at least one Superfund site. The county with the highest number of sites by far is Montgomery County with 17 total sites. Of the counties that contain a Superfund site, a majority of them only have one site total within their county limits. 
-
-&nbsp;
-
+This plot gives an overview of the number of Superfund sites per county contextualizing the distribution of Superfund sites across counties in Pennsylvania. Of the 67 total counties in PA, almost half (33 counties) contain at least one Superfund site. The county with the highest number of sites by far is Montgomery County with 17 total sites. Of the counties that contain a Superfund site, a majority of them only have one site total within their county limits.
 
 ```{r plot A, message=FALSE, warning=FALSE}
 superfund_sites =
@@ -180,11 +168,9 @@ aes(x = reorder(county, -n_superfund), y = n_superfund, color = county, fill = c
 ggplotly(superfund_count)
 ```
 
-#### **County Level Mean Superfund Site Score **
-The Hazard Ranking System (HRS) is what the EPA uses to determine the site_score and place sites on the National Priorities List, thus classifying them as Superfund sites to work towards clearing up. To be designated as such, the site must have a score greater than 28.5 on a scale of 0 to 100. This table provides the average site score among all sites in Pennsylvania as well as the lowest and highest site scores. 
+#### **County Level Mean Superfund Site Score** 
 
-&nbsp;
-
+The EPA utilizes a Hazard Ranking System (HRS) to determine the site score, which is used to place sites on the National Priorities List (NPL). The NPL is a list of hazardous waste sites in the US that are eligible for long-term clean-up financed under the federal Superfund program. For a site to be on the NPL, the site must have a score greater than 28.5 on a scale of 0 to 100 where the site is judged upon the likelihood that it has released or has the potential to release hazardous waste into the environment, toxicity of the waste, and the people or environments that are affected by the waste. A higher score indicates higher risk of waste release. This table provides the average site score among all sites in Pennsylvania as well as the lowest and highest site scores.
 
 ```{r cleaning, message=FALSE, warning=FALSE}
 superfund_sites =
@@ -215,10 +201,95 @@ superfund_stat =
 superfund_stat
 ```
 
-#### **Location of Superfunds in PA **
-We wanted to explore the location of the Superfund sites to determine whether they were randomly distributed or clustered in certain areas in the state of PA. From the plot below, we can see that a majority of the Superfunds are located in the Southeastern portion of Pennsylvania and the ones with the highest site scores are also located in that region. 
+#### **Location of Superfunds in PA** 
 
-&nbsp;
+We wanted to explore the location of the Superfund sites to determine whether they were randomly distributed or clustered in certain areas in the state of PA. From the plots below, we can see that a majority of the Superfunds are located in the Southeastern portion of Pennsylvania and the ones with the highest site scores are also located in that region.
+
+```{r message=FALSE, warning=FALSE}
+
+pa_county =
+  st_read("./data/PaCounty2022_11.shp") %>% 
+  janitor::clean_names() %>% 
+  rename(county = county_nam) %>% 
+  mutate(county = str_to_title(county)) %>% 
+  select(county, fips_count, shape_leng, shape_area, geometry)
+
+
+sf_superfund = 
+  st_as_sf(superfund_sites, coords = c("longitude", "latitude"), crs = 4269) %>% 
+  select(site_name, x, y, everything())
+
+tm_shape(pa_county) +
+  tm_polygons(col = "grey90",
+              border.col = "white") + 
+  tm_shape(sf_superfund) +
+  tm_dots(col = "brown",
+          alpha = 1) +
+  tm_layout(
+    main.title = "Active NPL Superfund Sites in Pennsylvania, 2022",
+    main.title.position = "center",
+    frame = FALSE
+  ) +
+  tm_compass(position = c("right", "bottom"), size = 2) +
+  tm_scale_bar(position = c("left", "bottom", size = 2)) +
+  tm_layout(inner.margins = c(0.2, 0.02, 0.02, 0.02))
+
+```
+
+```{r static_map_2,  message=FALSE, warning=FALSE}
+health_outcomes = 
+  read_csv("./data/PLACES_County_2022.csv") %>% 
+  janitor::clean_names() %>% 
+  filter(state_abbr == "PA") %>% 
+  select(-state_abbr, -state_desc) %>% 
+  rename(county = county_name) %>% 
+  mutate(
+    county = as.factor(county),
+    county = str_to_title(county)
+  ) %>% 
+  select(county, county_fips, total_population, starts_with("access2"), starts_with("binge"), starts_with("cancer"), starts_with("casthma"), starts_with("smoking"), starts_with("depression"), geolocation
+  )
+
+superfund_by_county =
+  superfund_sites %>% 
+  group_by(county) %>% 
+  summarize(
+    n_superfund = n(),
+    mean_site_score = mean(site_score)) %>% 
+  mutate(
+    county = as.factor(county)
+  )
+
+only_data =
+  left_join(health_outcomes, superfund_by_county, by = "county") %>% 
+  mutate_at(
+    vars("n_superfund", "mean_site_score"), ~replace(., is.na(.), 0)
+  )
+
+pa_combined =
+  left_join(pa_county, only_data, by = "county")
+
+tm_shape(pa_combined) +
+  tm_polygons(col = "n_superfund",
+              style = "jenks",
+              n = 5,
+              palette = "YlOrBr",
+              border.col = "black",
+              title = "Superfund Sites") +
+  tm_layout(
+    main.title = "Number of Superfund Sites by County, Pennsylvania 2022",
+    main.title.position = "center",
+    main.title.size = 1.2,
+    legend.position = c("right", "center"),
+    legend.outside = TRUE,
+    legend.title.size = 0.8,
+    legend.text.size = 0.6,
+    frame = FALSE
+  ) +
+  tm_compass(position = c("right", "bottom"), size = 2) +
+  tm_scale_bar(position = c("left", "bottom", size = 2))+
+  tm_layout(inner.margins = c(0.2, 0.02, 0.02, 0.0))
+```
 
 ```{r plot 3, message=FALSE, warning=FALSE}
 superfund_geo =
@@ -231,7 +302,7 @@ superfund_geo =
     x = "Longitude",
     y = "Latitude"
   ) +
-  ggtitle("Location of Superunds with Site Score")
+  ggtitle("Location of Superfunds with Site Score")
 
 ggplotly(superfund_geo)
 ```
@@ -240,7 +311,7 @@ ggplotly(superfund_geo)
 
 #### **Asthma and Cancer Prevalence at the County Level**
 
-Since we're interested in asthma and cancer outcomes in PA, we wanted to see the prevalence of cancer and asthma outcomes on the county level for PA. Below are two plots that give the prevalence of cancer and asthma among adults 18+ in each county reported as a percentage. From these two plots, we can see that most counties in PA exceed the national prevalence for both asthma and cancer, which made us interested to explore whether that was because PA ranks third in terms of states with the most Superfund sites. 
+Since we're interested in asthma and cancer outcomes in PA, we wanted to see the prevalence of cancer and asthma outcomes on the county level for PA. Below are two plots that give the prevalence of cancer and asthma among adults 18+ in each county reported as a percentage. From these two plots, we can see that most counties in PA exceed the national prevalence for both asthma and cancer, which made us interested to explore whether that was because PA ranks third in terms of states with the most Superfund sites.
 
 ```{r plot 4, message=FALSE, warning=FALSE}
 #Data Cleaning to Extract 95% CIs 
@@ -285,9 +356,8 @@ aes(x = reorder(county,-casthma_crude_prev), y = casthma_crude_prev, color = cou
 ggplotly(asthma_plot)
 
 ```
-** Red Line: national asthma prevalence calculated from national dataset with all states.
 
-&nbsp;
+\*\* Red Line: national asthma prevalence calculated from national dataset with all states.
 
 ```{r plot 5, message=FALSE, warning=FALSE}
 
@@ -310,18 +380,14 @@ aes(x = reorder(county,-cancer_crude_prev), y = cancer_crude_prev, color = count
 
 ggplotly(cancer_plot)
 ```
-** Red Line: national cancer prevalence calculated from CDC dataset with all states.
 
-&nbsp;
+\*\* Red Line: national cancer prevalence calculated from CDC dataset with all states.
 
 #### **Assessment of Linear Relationship between Cancer and Asthma Outcomes with Other Health Outcomes**
 
-We wanted to see how our outcomes of asthma and cancer prevalence correlated with other health behaviors such as smoking and access to health insurance, in addition to mental health measured via depression. We also wanted to explore whether asthma and cancer prevalence correlated with  mean Superfund Site Score in the county. 
+We wanted to see how our outcomes of asthma and cancer prevalence correlated with other health behaviors such as smoking and access to health insurance, in addition to mental health measured via depression. We also wanted to explore whether asthma and cancer prevalence correlated with mean Superfund Site Score in the county.
 
-From these four scatter plots with best fit lines grouped by asthma as the dependent variable, smoking prevalence, depression prevalence, and lack of insurance, all have a positive relationship with asthma prevalence on the county level. Mean Superfund site score seems to be more randomly distributed, with a slight downward trend that is likely influenced by the one outlier. 
-
-&nbsp;
-
+From these four scatter plots with best fit lines grouped by asthma as the dependent variable, smoking prevalence, depression prevalence, and lack of insurance, all have a positive relationship with asthma prevalence on the county level. Mean Superfund site score seems to be more randomly distributed, with a slight downward trend that is likely influenced by the one outlier.
 
 ```{r plot 6, message=FALSE, warning=FALSE}
 
@@ -428,9 +494,8 @@ asthma_predict_panel +
   ) + 
   plot_layout(guides = "collect")
 ```
-For Cancer Prevalence as the outcome, smoking and depression have a slight positive correlation with ashtma prevalence on the county level. On the other hand, lack of insurance and mean superfund site score seem to have a more random distribution with cancer. The best fit line for these two outcomes show a slight negative correlation but it is likely influenced by the outliers. 
 
-&nbsp;
+For Cancer Prevalence as the outcome, smoking and depression have a slight positive correlation with asthma prevalence on the county level. On the other hand, lack of insurance and mean superfund site score seem to have a more random distribution with cancer. The best fit line for these two outcomes show a slight negative correlation but it is likely influenced by the outliers.
 
 ```{r plot 7, message=FALSE, warning=FALSE}
 Cancer_Smoking =
@@ -498,11 +563,10 @@ cancer_predict_panel +
   plot_layout(guides = "collect")
 ```
 
-#### **Comparison of Health Outcomes for Counties With and Without Superfund Sites **
+#### **Comparison of Health Outcomes for Counties With and Without Superfund Sites** 
 
-We also wanted to explore if cancer outcomes and asthma outcomes were different based on whether a county had a Superfund in their county lines. Based on the plot below, it seems like the the median values for cancer, asthma, and healthcare access are similar among counties with Superfund sites and counties without Superfund sites in their jurisdiction. 
+We also wanted to explore if cancer outcomes and asthma outcomes were different based on whether a county had a Superfund in their county lines. Based on the plot below, it seems like the the median values for cancer, asthma, and healthcare access are similar among counties with Superfund sites and counties without Superfund sites in their jurisdiction.
 
-&nbsp;
 ```{r plot 9, message=FALSE, warning=FALSE}
 no_superfund = 
   full_join(superfund_score, health_prev, by = "county") %>%
@@ -542,7 +606,7 @@ asthma_superfund
 
 # Regression Analysis
 
-Due to the evidence from the exploratory analysis suggesting that there was no apparent relationship between prevalence rates (operationalized as a percentage) and mean site score. Thus, instead the prevalence rates were converted to cancer counts (the CDC derived these prevalence counts through taking the total number of individuals who had the disease divided by total number of individuals in the county) and utilizing a poisson regression. As there was no time component no offset variable was utilized. 
+Due to the evidence from the exploratory analysis suggesting that there was no apparent relationship between prevalence rates (operationalized as a percentage) and mean site score. Thus, instead the prevalence rates were converted to cancer counts (the CDC derived these prevalence counts through taking the total number of individuals who had the disease divided by total number of individuals in the county) and utilizing a poisson regression. As there was no time component no offset variable was utilized.
 
 ```{r, message = FALSE, warning = FALSE}
 health_outcomes = 
@@ -601,11 +665,11 @@ combined_data_final=
 
 ## Cancer
 
-The data provided is at the state-level, however it was converted to county-level for the purpose of this model. The outcome of interest is the number of individuals with cancer in a 1 year period by county differed by county.As this was count data, Poisson Regression with a log link function was utilized. No offset term was utilized in the data as count data is modeled. 
+The data provided is at the state-level, however it was converted to county-level for the purpose of this model. The outcome of interest is the number of individuals with cancer in a 1 year period by county differed by county.As this was count data, Poisson Regression with a log link function was utilized. No offset term was utilized in the data as count data is modeled.
 
 #### *Crude Model*
 
-We evaluated the  cancer crude counts (total number of individuals who had cancer by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased cancer prevalence, with the greatest occurring among Allegheny county (RR: 10.759, 95% CI (10.636, 10.883)). 
+We evaluated the cancer crude counts (total number of individuals who had cancer by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased cancer prevalence, with the greatest occurring among Allegheny county (RR: 10.759, 95% CI (10.636, 10.883)).
 
 ```{r}
   combined_data_final %>% 
@@ -625,13 +689,10 @@ We evaluated the  cancer crude counts (total number of individuals who had cance
 
 #### *Confounder Selection: Analyze these values:*
 
-<<<<<<< HEAD
 We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavioral factors like smoking, and health attributes like depression could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
-=======
-We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (i.e access to insurance), behavioral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
->>>>>>> c6483932c0684099e5a6c2e412d7ee5e12efda83
 
 `Total Population`
+
 ```{r}
 combined_data_final %>% 
   glm(cancer_population ~total_population, data = .,family = poisson(link='log'))%>%
@@ -640,8 +701,8 @@ combined_data_final %>%
 
 ```
 
+`Superfund Site Score`
 
-`superfund site score`
 ```{r}
 combined_data_final %>% 
   glm(cancer_population ~site_score, data = .,family = poisson(link='log'))%>%
@@ -649,7 +710,8 @@ combined_data_final %>%
  knitr::kable(digits = 3)
 ```
 
-`Depression`, 
+`Depression`,
+
 ```{r}
   combined_data_final %>% 
   glm(cancer_population ~depression_population, data = .,family = poisson(link='log'))%>%
@@ -657,7 +719,8 @@ combined_data_final %>%
   knitr::kable(digits = 3)
 ```
 
-`Insurance_Status`, 
+`Insurance Status`,
+
 ```{r}
   combined_data_final %>% 
   glm(cancer_population ~ insurance_population, data = .,family = poisson(link='log'))%>%
@@ -667,6 +730,7 @@ combined_data_final %>%
 ```
 
 `Smoking`
+
 ```{r}
   combined_data_final %>% 
   glm(cancer_population ~ smoking_population, data = .,family = poisson(link='log'))%>%
@@ -675,11 +739,9 @@ combined_data_final %>%
 
 ```
 
-
 #### *Adjusted Analysis*
 
 After adjustment for these factors we find that our confounding factors (including the interaction term between Superfund_sites and county) are not significant, they do impact the county variables. Notably, when accounting for these variables, Allegheny County no longer is our largest risk ratio but instead Fayette County (RR: 27.051, 95% CI(20.616,35.495)). This would suggest that these factors do indeed impact our measurement of cancer by county. What makes this fascinating is that Fayette County does not have a superfund site, furthering evidence that cancer counts may be due to outside factors not originally in our study.
-
 
 ```{r}
   combined_data_final %>% 
@@ -699,7 +761,7 @@ After adjustment for these factors we find that our confounding factors (includi
 
 #### *Model Fit*
 
-We opted to investigate model fit through analyzing over dispersion. We did not find over dispersion to be an issue in our estimate. 
+We opted to investigate model fit through analyzing over dispersion. We did not find over dispersion to be an issue in our estimate.
 
 ```{r}
   combined_data_final%>% 
@@ -710,17 +772,16 @@ We opted to investigate model fit through analyzing over dispersion. We did not 
   knitr::kable(digits = 3)
 ```
 
-
 ## Asthma
 
-The data provided is at the state-level, however it was converted to county-level for the purpose of this model. We were originally given the outcome of interest is the number of individuals with asthma in a 1 year period by county differed by county.As this was count data, Poisson Regression with a log link function was utilized.No offset term was utilized in the data as count data is modeled. 
+The data provided is at the state-level, however it was converted to county-level for the purpose of this model. We were originally given the outcome of interest is the number of individuals with asthma in a 1 year period by county differed by county. As this was count data, Poisson Regression with a log link function was utilized. No offset term was utilized in the data as count data is modeled.
 
 #### *Crude Model*
 
-We evaluated the  cancer crude counts (total number of individuals who had asthma by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased asthma prevalence, with the greatest occurring among Philadelphia county (RR: 18.468, 95% CI (18.280, 18.658)). 
+We evaluated the cancer crude counts (total number of individuals who had asthma by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased asthma prevalence, with the greatest occurring among Philadelphia county (RR: 18.468, 95% CI (18.280, 18.658)).
 
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~ county, data = .,family = poisson(link = 'log'))%>%
   broom::tidy()%>%
   mutate(
@@ -737,9 +798,10 @@ We evaluated the  cancer crude counts (total number of individuals who had asthm
 
 #### *Confounder Selection*
 
-We hypothesized this was a function of population size in urban cities. We also believed that the asthma counts may have had to do with potentially more toxic Superfund sites. Finally, we were interested in the potential for SES (i.e access to insurance), behavioral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
+We hypothesized this was a function of population size in urban cities. We also believed that the asthma counts may have had to do with potentially more toxic Superfund sites. Finally, we were interested in the potential for SES (i.e. access to insurance), behavioral factors like smoking, and health attributes like asthma could potentially confound our study. Therefore, we opted to explore whether county population size was impacting this relationship.
 
 `Total Population`
+
 ```{r}
 combined_data_final %>% 
   glm(asthma_population ~total_population, data = .,family = poisson(link='log'))%>%
@@ -748,8 +810,8 @@ combined_data_final %>%
 
 ```
 
+`Superfund Site Score`
 
-`superfund site score`
 ```{r}
 combined_data_final %>% 
   glm(asthma_population ~site_score, data = .,family = poisson(link='log'))%>%
@@ -757,17 +819,19 @@ combined_data_final %>%
  knitr::kable(digits = 3)
 ```
 
-`Depression`, 
+`Depression`,
+
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~depression_population, data = .,family = poisson(link='log'))%>%
   broom::tidy()%>% 
   knitr::kable(digits = 3)
 ```
 
-`Insurance_Status`, 
+`Insurance_Status`,
+
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~ insurance_population, data = .,family = poisson(link='log'))%>%
   broom::tidy()%>% 
  knitr::kable(digits = 3)
@@ -775,22 +839,21 @@ combined_data_final %>%
 ```
 
 `Smoking`
+
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~ smoking_population, data = .,family = poisson(link='log'))%>%
   broom::tidy()%>% 
   knitr::kable(digits = 3)
 
 ```
 
-
 #### *Adjusted Analysis*
 
 After adjustment for these factors we find that our confounding factors (including the interaction term between Superfund_sites and county) are not significant, they do impact the county variables. Notably, when accounting for these variables, Philadelphia County no longer is our largest risk ratio but instead Fayette County (RR: 28.362, 95% CI(22.214,36.211)). This would suggest that these factors do indeed impact our measurement of cancer by county. What makes this fascinating is that Fayette County does not have a Superfund site, furthering evidence that cancer counts may be due to outside factors not originally in our study.
 
-
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~ total_population+insurance_population+depression_population+smoking_population+site_score*county, data = .,family = poisson(link = 'log'))%>%
   broom::tidy()%>%
   mutate(
@@ -807,10 +870,10 @@ After adjustment for these factors we find that our confounding factors (includi
 
 #### *Model Fit*
 
-We opted to investigate model fit through analyzing over dispersion. We did not find over dispersion to be an issue in our estimate. 
+We opted to investigate model fit through analyzing over dispersion. We did not find over dispersion to be an issue in our estimate.
 
 ```{r}
-  combined_data_final%>% 
+combined_data_final%>% 
   glm(asthma_population ~ total_population+insurance_population+depression_population+smoking_population+site_score*county, data = .,family = poisson(link = 'log'))%>%
   dispersiontest(trafo = 1) %>% 
   broom::tidy() %>% 
@@ -818,28 +881,10 @@ We opted to investigate model fit through analyzing over dispersion. We did not 
   knitr::kable(digits = 3)
 ```
 
+# Discussion
 
-# Discussion 
-
-
-We find similar results from both the regression of cancer and asthma that likely point towards other factors besides Superfund Site exposure that determine disease status and overall confounded a potential relationships. Pennsylvania as a state has a higher than average prevalence of cancer and asthma (the national average is 6.5 which every county is well above). The number of Superfund sites did not seem to indicate potential cause of disease as well. What would be useful for the future is to produce a model that focuses on the Socioeconomic Status (research currently points towards income status and race/ethnicity as being potential causes as well. If we were to re-run this model and project it would be beneficial to compare Pennsylvania at the state level to other states in the United States to evaluate whether there was a statewide phenomena (such as the aforementioned higher than average cancer/asthma prevalence) instead of looking at the county level. This would explain why the observed confounding factors did not have a relationship with our outcome as well. 
+We find similar results from both the regression of cancer and asthma that likely point towards other factors besides Superfund Site exposure that determine disease status and overall confounded a potential relationships. Pennsylvania as a state has a higher than average prevalence of cancer and asthma (the national average is 6.5 which every county is well above). The number of Superfund sites did not seem to indicate potential cause of disease as well. What would be useful for the future is to produce a model that focuses on the Socioeconomic Status (research currently points towards income status and race/ethnicity as being potential causes as well. If we were to re-run this model and project it would be beneficial to compare Pennsylvania at the state level to other states in the United States to evaluate whether there was a statewide phenomena (such as the aforementioned higher than average cancer/asthma prevalence) instead of looking at the county level. This would explain why the observed confounding factors did not have a relationship with our outcome as well.
 
 ### Limitations
 
 From doing more research after our findings, living near a Superfund site is shown to have adverse health effects within a 1.8 mile radius of a Superfund site. While the EPA data had exact coordinates, the CDC data did not and only provided the data on a county level. Data on the Cartesian coordinate level for health outcomes is likely not possible since it would provide a lot of data that would work against the data de-identification rules for health data.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
