--- a/index.Rmd
+++ b/index.Rmd
@@ -59,5 +59,5 @@ Data for this website was acquired from the CDC and EPA specifically for Superfu
 <li>[Mindy Tran](https://mindytran96.github.io/)</li>
 <li>[Rahul Hosalli](https://r-hosalli.github.io/)</li>
 <li>[Armaan Sodhi](https://as6447.github.io/)</li>
-<li>[Vannessa Dinh](https://vd24071.github.io/)</li>
+<li>[Vanessa Dinh](https://vd24071.github.io/)</li>
 </ul>
